--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Neuronics lab, IISc</div>
-              <p>Currently, working on Circuit Designing and FPGA design of Ultrasound imaging in Neuronics lab, Indian Institute of Science </p>
+              <p>Currently, working on Circuit Designing and FPGA design of Ultrasound imaging system and hardware implementation of self-reset ADC in Neuronics lab, Indian Institute of Science </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
@@ -236,7 +236,7 @@
           <p>   --->Club  Admin and Coordinator, 2015-16</p>
 
           <div class="subheading mb-3">Delhi Mini Maker Faire, 2016</div>
-          <p>   --->Student Coordinator</p>
+          <p>   --->Student Coordinator and Volunteer</p>
 
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
           <p>   --->Mentor, HackIIITD & Circuitrix Jr(`16)</p>
@@ -255,7 +255,7 @@
           <p>   --->1st position in intra IIITD circuit tournament`13</p>
 
           <div class="subheading mb-3">Interests and hobbies</div>
-          <p>   --->Watching captivating TV shows and movies, Reading Science alert blogs, playing Guitar and Western dancing</p>
+          <p>   --->Watching captivating TV shows and movies, reading Science alert blogs, playing Guitar, capturing through lens and western dancing</p>
 
 
 
