--- a/index.html
+++ b/index.html
@@ -129,12 +129,23 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Sri Chaitanya College</h3>
+              <h3 class="mb-0">Sri Chaitanya College, KKR campus, Vijayawada</h3>
               <div class="subheading mb-3">MPC(APBSE)</div>
-              <p>Percentage: 96.6</p>
+              <p>Percentage: 96.6%</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2012 - May 2013</span>
+            </div>
+          </div>
+          
+        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Bhashyam Public School,  Tanuku</h3>
+              <div class="subheading mb-3">10th Standard(APBSE)</div>
+              <p>Percentage: 93%</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2010 - May 2011</span>
             </div>
           </div>
 
