--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Sri Chaitanya College, KKR campus, Vijayawada</h3>
+              <h3 class="mb-0">Sri Chaitanya College(KKR campus), Vijayawada</h3>
               <div class="subheading mb-3">MPC(APBSE)</div>
               <p>Percentage: 96.6%</p>
             </div>
@@ -137,7 +137,7 @@
               <span class="text-primary">August 2012 - May 2013</span>
             </div>
           </div>
-          
+          <hr>
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Bhashyam Public School,  Tanuku</h3>
