--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Custom styles for this template -->
     <link href="css/resume.css" rel="stylesheet">
     <style>
-    img {
+    img1 {
       float: left;
       padding-left: 15px; 
     }
@@ -177,7 +177,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="my-auto">
           <h2 class="mb-5">Projects</h2>
-          <div><img src="img/MSD.png" width="100" height="140">
+          <div><img1 src="img/MSD.png" width="100" height="140">
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
           <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
