--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <style>
     img1 {
       float: left;
-      padding-left: 15px; 
+      padding-right: 15px; 
     }
     </style>
   </head>
