--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="subheading mb-5">M: 9899494195,
             <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
           </div>
-          <p class="mb-5">I am an Electronics and Computers enthusiastic. Currently, working in Neuronics lab, IISc and graduated from IIITD in ECE'17. Everything I am into is in hashtags</p>
+          <p class="mb-5">I am an Electronics and Computers enthusiastic. Currently, working in Neuronics lab, IISc and graduated from IIITD in Electronics and Communication Engineering(2017). Everything I am into is in hashtags.</p>
           <h7 class="text-primary"> #VLSI #AnalogCircuits #EmbeddedElectronics #CircuitDesign #PCBDesign #AbitofML</h7>
           
       
@@ -89,7 +89,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Neuronics lab, IISc</div>
-              <p>Currently, working on Circuit Designing and FPGA design of Ultrasound imaging system and hardware implementation of self-reset ADC in Neuronics lab, Indian Institute of Science </p>
+              <p>Currently, working on Circuit designing and FPGA design of Ultrasound imaging system and hardware implementation of self-reset ADC in Neuronics lab, Indian Institute of Science(IISc) </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
@@ -100,7 +100,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Project Engineer</h3>
               <div class="subheading mb-3">Wipro, Communications BU</div>
-              <p>The project in Wipro is about studying the Wipro Holmes bots which are Machine Learning  based, and identify the test cases in them and configuring the bots in T-Mobile, Poland account of Wipro.</p>
+              <p>The project in Wipro is about studying the Wipro Holmes bots which are Machine Learning  based, and identify the test cases in them. Also, configuring the bots according to the usability in T-Mobile, Poland account of Wipro.</p>
     <p>Crowdsourcing projects: A VLSI project on designing an 8 - bit ALU in Verilog and generating the test cases for the same. Alongside, a Perl scripting[certified by Udemy] project on automation cases which is indeed useful in scripting on EDA tools.
 </p>
             </div>
