--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <h2 class="mb-5">Projects</h2>
           <div><img1 src="img/MSD.png" width="100" height="140">
           <div class="subheading mb-3">4th order Switched Capacitor narrowband BandPass filter</div>
-          <div>Design of a transistor level narrow bandpass filter of 4th order to filter out the brain waves of frequency range 25 Hz-100 Hz.  </div>
+          <div>Design of transistor level narrow bandpass filter of 4th order to filter out the brain waves in the frequncy range 25 Hz-100 Hz.  </div>
           <div>Guide: Dr. Pydi Ganga</div>
           <div> Tools: Cadence - Virtuoso.</div>
           <a https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf" class="text-primary" >Poster[Link]<br /></a>
@@ -194,8 +194,8 @@
           <hr>
           <div class="subheading mb-3">PCB/Circuit Design and Fabrication</div>
           <div> EMI Sensing Board - Design and Fabrication of EMI sensing board using current transformer with a low noise amplifier[Research project]. <br />
-          Constant Current LED driver board: Design and Fabrication of constant current LED board for testing the spectrometer. <br />
-          IIITDuino: Design of in home version of arduino for IIITD with is compatible with the courses. <br /> 
+          Constant Current LED driver board: Design and Fabrication of constant current LED board for testing portable spectrometer. <br />
+          IIITDuino: Design of in-home version of Arduino for IIITD with is compatible with the electronics courses. <br /> 
           Breakout Boards and custom made libraries: Mux - ADG736, ADG719, LEDs - 1316, L424, LHT674, OSI-330 series, VS. </div> 
           <div>Guide and Collaborator: Manoj Gulati, Ph.D student, IIITD.</div>
           <div> Tools: Eagle CAD.</div>
@@ -205,7 +205,7 @@
 
           <div>
           <div class="subheading mb-3"> Design and Implementation of a Serial to Parallel and Parallel to Serial IC.</div>
-          <div>Design and Implementation of an IC that can convert Serial input to parallel output, Parallel input to Serial output and Parallel input to Parallel output. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.</div>
+          <div>Design and Implementation of an IC that can convert Serial input to Parallel output, Parallel input to Serial output and Parallel input to Parallel output using select line. From Idea to GDS, the whole VLSI flow is implemented using the below tools and platforms.</div>
           <div>Guide: Dr. Sneh Saurabh</div>
           <div> Tools and technologies: Synopsis – DC, VCS, PrimeTime. Cadence – Encounter.</div>
           <div>Language: Verilog.</div>
@@ -214,7 +214,7 @@
           <hr>
             
           <div class="subheading mb-3">SoC Security: A logic level methodology to prevent Differential power analysis</div>
-          <div> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and seen that the power consumption is constant.</div>
+          <div> Measuring the power consumption of the every logic transition will reveal the information the is being processed in the chip. This project is to develop a logic methodology which has constant power consumption for every transition. A side channel attack is implemented on the FPGA with the logic methodology that was developed and the power consumption is shown constant.</div>
           <div>Guide: Dr. Sujay Deb</div>
           <div>Technologies and Languages: FPGA, DPO and Verilog </div>
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf" class="text-primary" >PPT[Link]<br /></a>
@@ -222,7 +222,7 @@
           <hr>
 
           <div class="subheading mb-3">Red ball detection on Quadcopter</div>
-          <div> The project is an implementation of PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).</div>
+          <div> The project is an implementation of Kalman filter based PID controller on Quadcopter for tracking red ball in triaxial which is based on Python and openCV on Robotic Operating System(ROS).</div>
           <div>Guide: Dr. P. B. Sujit.</div>
           <div>Language used: Python libraries.</div>
           <a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py" class="text-primary" >Code[Link]<br /></a>
@@ -230,7 +230,7 @@
           <hr>
  
           <div class="subheading mb-3">Signal inpainting on graphs</div>
-          <div> The projects aims to implement an algorithm that can recreate missing parts of a signal using graph variation minimization and regulation on graph representation of data. </div>
+          <div> The projects aims to implement  graph variation minimization and regulation algorithms that can recreate missing parts of a signal using on graphical representation of data. </div>
           <div>Guide: Dr. Anubha Gupta.</div>
           <div> Technologies used: Matlab.</div>
           <a href="https://github.com/HemanthSabbella/Signal_inpainting" class="text-primary" >Report[Link] <br /></a>
