--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
         <div class="my-auto">
           <h2 class="mb-5">Extracurricular</h2>
           <div>
-          <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/Electoholics.jpg" class="text-primary">c</a></div>
+          <div class="subheading mb-3">Electroholics, The Electronics club of  IIITD<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/Electoholics.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Club  Admin and Coordinator, 2015-16</p>
           <hr>
-          <div class="subheading mb-3">Delhi Mini Maker Faire, 2016<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/DMMF.jpg" class="text-primary">c</a></div>
+          <div class="subheading mb-3">Delhi Mini Maker Faire, 2016<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/DMMF.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Student Coordinator and Volunteer</p>
           <hr>
           <div class="subheading mb-3">Esya, tech fest of IIITD</div>
@@ -270,7 +270,7 @@
           <div class="subheading mb-3">Interests and hobbies</div>
           <p>    &#8594 Reading science alert blogs, capturing through lens(an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">natgeotravelerindia</a>),  playing guitar, western dancing and watching captivating TV shows and movies. </p>
           <hr>
-          <div class="subheading mb-3">Community Work at Shanti Sayhog<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">c</a></div>
+          <div class="subheading mb-3">Community Work at Shanti Sayhog<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[c]</a></div>
           <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017. 
 
 
