--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
           <p>    &#8594 Graphic Designer</p>
           <hr>
           <div class="subheading mb-3">Community Work at Shanti Sayhog<a href="https://github.com/HemanthSabbella/HemanthSabbella.github.io/blob/master/img/NGO_CommunityWork.jpg" class="text-primary">[c]</a></div>
-          <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017. 
+          <p>     &#8594 Volunteered for educating Delhi slum children in Summer-2017.
+          <hr>
           <div class="subheading mb-3">Guest lecture, Introduction to Engineering Design course - IIITD</div>
           <p>     &#8594 Basics of PCB Designing</p>
           <hr>
@@ -271,7 +272,8 @@
           <hr>
           <div class="subheading mb-3">Interests and hobbies</div>
           <p>    &#8594 Reading science alert blogs, capturing through lens(an image got published in <a href="https://www.instagram.com/p/BtlRFouA79c/" class="text-primary">natgeotravelerindia</a>),  playing guitar, western dancing and watching captivating TV shows and movies. </p>
-          
+          <br>
+          *C - certificate, N - newsletter, P - Poster
 
 
 
