--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Neuronics lab, IISc</div>
-              <p>Currently, working on Circuit designing and FPGA design of low-cost portable ultrasound imaging system and implemented hardware prototype design of unlimited dynamic range(UDR) ADC in Neuronics lab, Indian Institute of Science(IISc) </p>
+               <ul>
+              <li>Circuit designing and FPGA design of low-cost portable ultrasound imaging system </li>
+              <li>Hardware prototype design of unlimited dynamic range(UDR) ADC </li>
+              <li>Voltage sensing of silver nanoparticles and their effects</li>
+            </ul> 
+            
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2018 - Present</span>
