--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             <span class="text-secondary">(Sai Hemanth Reddy Sabbella)</span>
           </h2>
           <div class="subheading mb-5">M: 9899494195;
-            <a href="mailto:hemanthrs@iisc.ac.in" class="text-primary" >hemanthrs@iisc.ac.in</a>
-            <a href="mailto:sabbella13152@iiitd.ac.in" class="text-primary" >sabbella13152@iiitd.ac.in</a>
-            <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>
+            <a href="mailto:hemanthrs@iisc.ac.in" class="text-primary" >hemanthrs@iisc.ac.in</a>;
+            <a href="mailto:sabbella13152@iiitd.ac.in" class="text-primary" >sabbella13152@iiitd.ac.in</a>;
+            <a href="mailto:sabbellahemanth@gmail.com" class="text-primary" >sabbellahemanth@gmail.com</a>.
           </div>
           <p>Namaste!</p>
           <p class="mb-5"> I am Hemanth Sabbella. I got graduated from IIITD in Electronics and Communications engineering and currently, working as research assistant in Indian Institute of Science(IISc). I work on hardware especially, embedded electronics, digital and analog circuits, VLSI. Unlike, conventional electronics engineers, I code as well. I don't restrict myself to a field, I integrate my knowledge into interdisciplinary fields. Apart from the above, I click good pictures, I dance, play guitar at times and eat good food </p>
