--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                <ul>
               <li>Circuit designing and FPGA design of low-cost, portable, super-resolution ultrasound imaging system </li>
               <li>Hardware prototype design of a novel unlimited dynamic range(UDR) ADC<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper submitted]</a> </li>
-              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects<a href="" class="text-primary"> [Patent in progess]</a>  <a href="" class="text-primary">[Paper in progess]</a></li>
+              <li>Voltage induced synthesis of metal(Au, Ag) nanoparticles and it's effects<a href="" class="text-primary"> [Patent submitted]</a>  <a href="" class="text-primary">[Paper in progess]</a></li>
             </ul> 
             
             </div>
