--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
          border-radius: 4px;
          padding: 5px;
          width: 150px;
+         float: left;
          }
        img1 {
          border: 1px solid #ddd;
