--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
          padding: 5px;
          width: 150px;
          float: left;
+         padding-right: 15px;
          }
        img1 {
          border: 1px solid #ddd;
