--- a/projects/index.html
+++ b/projects/index.html
@@ -1,248 +1,193 @@
 <!DOCTYPE html>
 <html lang="en">
 	
-	<head>
-	<meta charset="utf-8">
-	<meta name="viewport" width="device-width, initial-scale=1.0">
-	<meta name="description" content="Hands-on projects">
-	<meta name="author" content="Hemanth Sabbella">
-	<meta property="og:image" content="img/hemanth_small.jpg" />
-	<!-- favicon
-	<link rel="shortcut icon" href="/img/ico/favicon.png">
-	-->
-	<title>Projects | Hemanth </title>		
-	<!-- styles -->
-	<link href="/css/bootstrap.css" rel="stylesheet">
-	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
-	
-	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	<!--[if lt IE 9]>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <meta name="description" content="Hands-on projects">
+  <meta name="author" content="Hemanth Sabbella">
+  <meta property="og:image" content="img/hemanth_small.jpg" />
+  <title>Projects | Hemanth </title>		
+
+  <!-- styles -->
+  <link href="/css/bootstrap.css" rel="stylesheet">
+  <link href="/css/jumbotron-narrow.css" rel="stylesheet">
+  <link href="/css/style.css" rel="stylesheet">
+
+  <!-- override link colors to ocean-primary -->
+  <style>
+    :root {
+      --ocean-primary: #0096C7;
+      --ocean-hover:   #006494;
+    }
+    a {
+      color: var(--ocean-primary);
+      text-decoration: none;
+    }
+    a:hover,
+    a:focus {
+      color: var(--ocean-hover);
+      text-decoration: underline;
+    }
+  </style>
+
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
   <script src="../../assets/js/html5shiv.js"></script>
   <script src="../../assets/js/respond.min.js"></script>
-	<![endif]-->
-	<!-- google analytics - i will not share this data with google -->
-	<!--
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-38506466-1', 'jmcglone.com');
-		  ga('send', 'pageview');
-
-		</script> -->	
+  <![endif]-->
 </head>
 
-	
-	<body>
-		<div class="container">
-			
-			<div class="header">
-	<ul class="nav nav-pills pull-right">
-		</a></li>
-		<!-- <li class="passive"><a href="/projects" title="Projects">Projects</a></li> -->
-		<!-- <li class="passive"><a href="/notes" title="Notes">Notes</a></li> -->
-		<li class="passive"><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
-		<li class=""><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
-		<li class="passive"><a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing" title="CV" style="text-transform: none;">CV</a></li>
-	</ul>
-	<h3 class="text-muted" style="text-transform: none;"><a href="/">Hemanth Sabbella</a></h3>
-</div> <!-- /header -->
+<body>
+  <div class="container">
+    <div class="header">
+      <ul class="nav nav-pills pull-right">
+        <li class="passive"><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
+        <li><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
+        <li class="passive">
+          <a href="https://drive.google.com/file/d/1dkaPXZ74r-vuzesvS_xgJQw0AjSPQSzF/view?usp=sharing"
+             title="CV" style="text-transform: none;">CV</a>
+        </li>
+      </ul>
+      <h3 class="text-muted" style="text-transform: none;">
+        <a href="/">Hemanth Sabbella</a>
+      </h3>
+    </div> <!-- /header -->
 
-			
-<style>
-	div.gallery {
-  margin: 7px;
-  margin-left: 30px;
-  border: 0px solid #ccc;
-  float: left;
-  width: 200px;
-  height: 300px;
+    <style>
+      div.gallery {
+        margin: 7px;
+        margin-left: 30px;
+        border: 0px solid #ccc;
+        float: left;
+        width: 200px;
+        height: 300px;
+      }
 
- }
+      div.gallery:hover {
+        --c: #1095c1; /* the color */
+        color: #0000;
+        background: 
+          linear-gradient(90deg, #fff 50%, var(--c) 0) calc(100% - var(--_p, 0%)) / 200%,
+          linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) no-repeat,
+          var(--_c, #0000);
+        -webkit-background-clip: text, padding-box, padding-box;
+                background-clip: text, padding-box, padding-box;
+        transition: 0s, color .5s, background-color .5s;
+      }
 
-div.gallery:hover {
---c: #1095c1; /* the color */
+      .hover:hover {
+        color: #fff;
+        --_c: var(--c);
+        --_p: 100%;
+        transition: 0.5s, color 0s .5s, background-color 0s .5s;
+      }
 
-  color: #0000;
-  background: 
-    linear-gradient(90deg, #fff 50%, var(--c) 0) calc(100% - var(--_p, 0%)) / 200%, 
-    linear-gradient(var(--c) 0 0) 0% 100% / var(--_p, 0%) no-repeat,
-    var(--_c, #0000);
-  -webkit-background-clip: text, padding-box, padding-box;
-          background-clip: text, padding-box, padding-box;
-  transition: 0s, color .5s, background-color .5s;
-}
-	
-.hover:hover {
-  color: #fff;
-  --_c: var(--c);
-  --_p: 100%;
-  transition: 0.5s, color 0s .5s, background-color 0s .5s;
-}
+      div.gallery img {
+        width: 100%;
+        height: auto;
+        border-radius: 3%;
+      }
 
-div.gallery img {
-  width: 100%;
-  height: auto;
-  border-radius: 3%;
-}
+      div.desc {
+        padding: 10px;
+        text-align: center;
+        /* changed from #428bca */
+        color: var(--ocean-primary);
+      }
+    </style>
 
-div.desc {
-  padding: 10px;
-  text-align: center;
-  color: #428bca;
+    <div class="projects">
 
-}
+      <div class="gallery">
+        <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
+          <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">PA2BLO</div>
+      </div>
 
-</style>
-<div class="projects">
+      <div class="gallery">
+        <a target="_blank" href="http://u-Bat.github.io/">
+          <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">u-Bat</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://ieeexplore.ieee.org/abstract/document/10494427">
-	    <img src="/img/IMG_0244.jpeg" alt="Cinque Terre" width="600" height="400">
-	  </a>
-	  <div class="desc">PA2BLO</div>
-	</div>
-	
-	<div class="gallery">
-	  <a target="_blank" href="http://u-Bat.github.io/">
-	    <img src="/img/logo_ubat.png" alt="Cinque Terre" width="600" height="400">
-	  </a>
-	  <div class="desc">u-Bat</div>
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
+          <img src="/img/pointSpectra.jpg" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">pointSpectra</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://hemanthsabbella.github.io/pointSpectra/">
-	    <img src="/img/pointSpectra.jpg" alt="Mountains" width="600" height="400">
-	  </a>
-	  <div class="desc">pointSpectra</div>
+      <div class="gallery">
+        <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
+          <img src="/img/UDR_ADC.PNG" alt="Northern Lights" width="600" height="400">
+        </a>
+        <div class="desc">UDR-ADC prototype</div>
+      </div>
 
-	</div>
-	
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
+          <img src="/img/Dhvani.jpeg" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">Dhvani</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://arxiv.org/pdf/1911.09371.pdf">
-	    <img src="/img/UDR_ADC.PNG" alt="Northern Lights" width="600" height="400">
-	  </a>
-	  <div class="desc">UDR-ADC prototype</div>
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
+          <img src="/img/MSD_project.png" alt="Cinque Terre" width="600" height="400">
+        </a>
+        <div class="desc">Gamma Brain Wave Filter</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Dhvani">
-	    <img src="/img/Dhvani.jpeg" alt="Forest" width="600" height="400">
-	  </a>
-	  <div class="desc">Dhvani</div>
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
+          <img src="/img/Soc_project.png" alt="Forest" width="600" height="400">
+        </a>
+        <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">
-	    <img src="/img/MSD_project.png" alt="Cinque Terre" width="600" height="400">
-	  </a>
-	  <div class="desc">Gamma Brain Wave Filter</div>
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
+          <img src="/img/Red_ball.png" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">Red Ball Detection on Quadcopter</div>
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">
-	    <img src="/img/Soc_project.png" alt="Forest" width="600" height="400">
-	  </a>
-	  <div class="desc">SoC Security: A logic level methodology to prevent differential power analysis</div>
-	</div>
-	
-	<!--
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Signal_inpainting">
-	    <img src="/img/Signal_inpainting.png" alt="Northern Lights" width="600" height="400">
-	  </a>
-	  <div class="desc">Signal inpainting on graphs</div>
-	</div>
-	-->
-	
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/Project_Reports/blob/master/robotics_ardrone.py">
-	    <img src="/img/Red_ball.png" alt="Mountains" width="600" height="400">
-	  </a>
-	  <div class="desc">Red Ball Detection on Quadcopter</div>
-	  
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
+          <img src="/img/EMI.png" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">EMI Sensing Board</div>	
+      </div>
 
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">
-	    <img src="/img/EMI.png" alt="Mountains" width="600" height="400">
-	  </a>
-	  <div class="desc">EMI Sensing Board</div>	
-	</div>
-	
-	<!--
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/LED_driver_board%5Bconstant_current%5D/TPS92638%20-%20Breakout(singlelayer)">
-	    <img src="/img/LED_driver.PNG" alt="Mountains" width="400" height="400">
-	  </a>
-	  <div class="desc">Constant Current LED Driver Board</div>
-	  
-	</div>
-	--> 
-		
-	<div class="gallery">
-	  <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
-	    <img src="/img/IIITDuino.PNG" alt="Mountains" width="600" height="400">
-	  </a>
-	  <div class="desc">IIITDuino</div>
-	  
-	</div>
+      <div class="gallery">
+        <a target="_blank" href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">
+          <img src="/img/IIITDuino.PNG" alt="Mountains" width="600" height="400">
+        </a>
+        <div class="desc">IIITDuino</div>
+      </div>
 
+    </div>
+  </div>
 
-	
-</div>
-	</div>
+  <div class="footer">
+    <div class="row">
+      <div class="col-sm-8">
+        <p><small></small></p>
+      </div>
+      <div class="col-sm-4">
+        <p class="pull-right"><small></small></p>
+      </div>
+    </div>
+  </div> <!-- /footer -->
 
-  
+  <!-- javascript at the end of the doc so page loads faster -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="/js/library.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
 
-
-<!--
-	<p>2020<a href="https://gitlab.com/HemanthSabbella/bird_detection_on_edge">Bird Detection on Edge</a></p>
-	<p>2019<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">Dhvani</a></p>
-	<p>2019<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">UDR-ADC prototype</a></p>
-	<p>2020<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">Venom-D</a></p>
-
-	<p>2017<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/MSD_project_final.pdf">Gamma Brain Wave Filter</a></p>
-	<p>2015<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">SoC Security:  A logic level methodology to prevent differential power analysis</a></p>
-	<p>2016<a href="https://github.com/HemanthSabbella/Signal_inpainting">Signal inpainting on graphs</a></p>
-	<p>2016<a href="https://github.com/HemanthSabbella/Project_Reports/blob/master/SoC%20Presentation.pdf">Red Ball Detection on Quadcopter</a></p>
-	<p style="color:#428bca;">2016,17 Hardware Designs:</p>
-	<p style="text-indent: 30px;" ><a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/EMI_sensing_board/LNA-Board(DL)">EMI Sensing Board</a></p>
-
-	<p style="text-indent: 30px;" ><a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/LED_driver_board%5Bconstant_current%5D/TPS92638%20-%20Breakout(singlelayer)">Constant Current LED Driver Board</a></p>
-	
-	<p  style="text-indent: 30px;"><a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/IIITDuino_hemanth">IIITDuino</a></p>
-	<p  style="text-indent: 30px; color:#428bca;"><a href="https://github.com/HemanthSabbella/PCBDesign/tree/master/Custom_libraries">Breakout Boards</a> & <a href="">Custom libraries</a></p>
--->
-
-
-			
-			<div class="footer">
-	<div class="row">
-	<div class="col-sm-8">
-	<p><small></small></p>
-	</div>
-	<div class="col-sm-4">
-	<p class="pull-right"><small></small></p>
-	</div>
-	</div>
-</div> <!-- /footer -->
-
-		
-		</div> <!-- /container -->
-	
-	
-		<!-- javascript at the end of the doc so page loads faster -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/library.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.js"></script>
-
-	
-	</body>
-
+</body>
 </html>
